--- a/views/adds/link_adds.ejs
+++ b/views/adds/link_adds.ejs
@@ -70,6 +70,8 @@
                                                 <option value="Appointments_Bottom_Right">Appointments_Bottom_Right</option>
                                                 <option value="Video_Gallery_News">Video_Gallery_News</option>
                                                 <option value="Appointment_Main">Appointment_Main</option>
+                                                <option value="Category_Bottom_Left">Category_Bottom_Left</option>
+                                                <option value="Category_Bottom_Right">Category_Bottom_Right</option>
                                             </select>
                                         </div>
                                     </div>
